--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Routing and navigation for your React Native apps",
   "main": "src/react-navigation.js",
   "repository": {
-    "url": "git@github.com:react-navigation/react-navigation.git",
+    "url": "git@github.com:andrewdazs/react-navigation.git",
     "type": "git"
   },
   "author":
@@ -34,7 +34,7 @@
     "prop-types": "^15.5.10",
     "react-lifecycles-compat": "^1.0.2",
     "react-native-drawer-layout-polyfill": "^1.3.2",
-    "react-native-safe-area-view": "^0.7.0",
+    "react-native-safe-area-view": "git://github.com/Snailapp/react-native-safe-area-view.git#0.14.7",
     "react-native-tab-view": "github:react-navigation/react-native-tab-view"
   },
   "devDependencies": {
