--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-lifecycles-compat": "^1.0.2",
     "react-native-drawer-layout-polyfill": "^1.3.2",
     "react-native-safe-area-view": "git://github.com/Snailapp/react-native-safe-area-view.git#0.14.7",
-    "react-native-tab-view": "github:react-navigation/react-native-tab-view"
+    "react-native-tab-view": "git://github.com/andrewdazs/react-native-tab-view"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
